# TabZ

./: CMakeLists.txt  README  TODO  TODO.diff  TODO.txt  TabS.pro  TabS.rc  TabS_fr.ts  TabZ.pro  TabZ.rc  TabZ_fr.ts  build_deb.sh  chords.cpp  chords.h  chordsmanager.cpp  chordsmanager.h  colorregexp.h  colorregexpform.h  compile_linux.sh  compile_win32_x.sh  downloadxta.cpp  downloadxta.h  epubgenerator.cpp  epubgenerator.h  findreplacedialog.cpp  findreplacedialog.h  fontlabellayout.h  guitar.cpp  guitar.h  highlighter.cpp  highlighter.h  httpupdate.cpp  httpupdate.h  install_deb.sh  lilypond.cpp  lilypond.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  (+33 more)
data/: tabz
data/usr/share/applications/: tabz.desktop
debian/DEBIAN/: control
debian/usr/share/applications/: TabS.desktop  tabs.desktop.desktop
debian/usr/share/menu/: TabS  tabs
doc/: Doxyfile  doc.tag
qwidgets/: mycheckabletree.cpp  mycheckabletree.h
